--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ section{
     border-radius: 5px;
     border: 2px solid var(--accent-crl-lila);
     background-color: var(--accent-crl-purple);
-    color:var(--base-clr-white);
+    color:var(--base-clr);
     font-size: 58pt;
     font-weight: 900;
     text-align: center;
@@ -111,4 +111,37 @@ header > button{
     color: var(--txt-clr-p);
     margin-top: 15px;
     font-size: 11pt;
+}
+
+/* Theme-switch button */
+
+#theme-switch{
+    height: 50px;
+    width: 50px;
+    padding: 0;
+    border-radius: 50%;
+    background: var(--bg-clr-main);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+
+}
+
+#theme-switch svg{
+    fill: var(--accent-crl-purple);
+}
+
+#theme-switch svg:last-child{
+    display: none;
+}
+
+.darkmode #theme-switch svg:first-child{
+    display: none;
+}
+
+.darkmode #theme-switch svg:last-child{
+    display: block;
 }
